syntax = "proto3";
package littlehorse;

option java_multiple_files = true;
option java_package = "io.littlehorse.canary.proto";

import "google/protobuf/timestamp.proto";
import "metrics.proto";

enum BeatType {
  WF_RUN_REQUEST = 0;
  GET_WF_RUN_REQUEST = 1;
  TASK_RUN_EXECUTION = 2;
}

message BeatKey {
  string server_host = 1;
  int32 server_port = 2;
  BeatType type = 3;
  optional string id = 4;
  repeated Tag tags = 5;
}

message BeatValue {
  google.protobuf.Timestamp time = 1;
  optional int64 latency = 2;
}
